[package]
name = "kasl"
version = "0.2.27"
edition = "2024"
license = "Apache-2.0"
description = "Parses and translates the kasl code into KASL-IR, an intermediate representation for KASL."
repository = "https://github.com/hatya-mouse/kasl-core"
homepage = "https://hatya.dev"
readme = "README.md"

[lib]
name = "kasl"
path = "src/lib.rs"

[features]
cranelift = ["dep:kasl-cranelift-backend"]

[dependencies]
kasl-core = "0.1.21"
kasl-cranelift-backend = { version = "0.1.4", optional = true }
kasl-ir = "0.3.1"

[dev-dependencies]
kasl = { path = "./" }
